--- a/dev/scss/libraries/_variables.scss
+++ b/dev/scss/libraries/_variables.scss
@@ -5,16 +5,16 @@
 //Font(s)
 $font-family: Arial, sans-serif !default;
 $font-size: 15px; // it's all relative
-$font-size-inner: 1em !default;
+$font-size-inner: 1rem !default;
 $font-weight: 300;
 
 //Color Variables
-$bg-color: #f1f1f1;
 $primary-color: #0080d1;
 $disabled-color: #ddd;
 $grey: #c2c2c2;
 $white: #fafafa;
 $black: #0a0a0a;
+$bg-color: $white;
 
 //Spacing Variables
 $valet-padding: 1em;
